@@ -86,6 +86,7 @@ COM_WEBLINKS_OPTIONS="Options"
 COM_WEBLINKS_ORDER_HEADING="Order"
 COM_WEBLINKS_SAVE_SUCCESS="Weblink successfully saved"
 COM_WEBLINKS_SEARCH_IN_TITLE="Search in title"
+COM_WEBLINKS_SHOW_EMPTY_CATEGORIES_DESC="If Show, empty categories will display. A category is only empty - if it has no Weblinks or subcategories."
 COM_WEBLINKS_SUBMENU_CATEGORIES="Categories"
 COM_WEBLINKS_SUBMENU_WEBLINKS="Web Links"
 COM_WEBLINKS_XML_DESCRIPTION="Component for web links management"
