@@ -250,6 +250,7 @@ COM_CONTACT_SELECT_CONTACT_LABEL="Select Contact"
 COM_CONTACT_SELECT_USER="Select User"
 COM_CONTACT_SHOW_EMAIL_ADDRESS_DESC="Show Email Address"
 COM_CONTACT_SHOW_EMAIL_ADDRESS_LABEL="Email Address"
+COM_CONTACT_SHOW_EMPTY_CATEGORIES_DESC="If Show, empty categories will display. A category is only empty - if it has no Contacts or subcategories."
 COM_CONTACT_SUBMENU_CATEGORIES="Categories"
 COM_CONTACT_SUBMENU_CONTACTS="Contacts"
 COM_CONTACT_WARNING_CATEGORY="This category is invalid"
