@@ -96,11 +96,9 @@ COM_WEBLINKS_OPTIONS="Options"
 COM_WEBLINKS_ORDER_HEADING="Order"
 COM_WEBLINKS_SAVE_SUCCESS="Weblink successfully saved"
 COM_WEBLINKS_SEARCH_IN_TITLE="Search in title"
+COM_WEBLINKS_SHOW_EMPTY_CATEGORIES_DESC="If Show, empty categories will display. A category is only empty - if it has no weblinks or subcategories."
 COM_WEBLINKS_SUBMENU_CATEGORIES="Categories"
 COM_WEBLINKS_SUBMENU_WEBLINKS="Web Links"
 COM_WEBLINKS_XML_DESCRIPTION="Component for web links management"
 JGLOBAL_NEWITEMSLAST_DESC="New Weblinks default to the last position. Ordering can be changed after this Weblink is saved."
-COM_WEBLINKS_SHOW_EMPTY_CATEGORY_DESC="If Show, empty categories will display. A category is only empty - if it has no weblinks or subcategories."
-COM_WEBLINKS_SHOW_EMPTY_CATEGORY_LABEL="Category Empty Categories"
-COM_WEBLINKS_SHOW_EMPTY_CATEGORIES_DESC="If Show, empty categories will display. A category is only empty - if it has no weblinks or subcategories."
-COM_WEBLINKS_SHOW_EMPTY_CATEGORIES_LABEL="Categories Empty Categories"
+
